# st_viewer

./: .gitignore  .gitmodules  ABOUT  AUTHORS  CHANGELOG  CMakeLists.txt  CONTRIBUTING  COPYING  DEPENDENCIES  DEVELOPERS  Dockerfile  INSTALL  LICENSE  LOG  README  README.downloaded_files  README.md  REPLACE_QT_LIBRARIES  STViewer.files  STViewer.includes  WELCOME  _clang-format  build_cygwin.sh  clang-format  client.kdev4  st_client.kdev4  stvi.files  stvi.includes  ubuntu_dep_and_compile.sh
ext/QtDebugHelper/: CMakeLists.txt
ext/QtSingleApplication/: CMakeLists.txt
ext/QtWaitingSpinner/: CMakeLists.txt
ext/libqxt/: CMakeLists.txt  qxtglobal.h  qxtnamespace.h  qxtspanslider_p.h
ext/picojson/: CMakeLists.txt
ext/qcustomplot/: CMakeLists.txt  qcustomplot.cpp  qcustomplot.h
ext/qjpeg-turbo/: CMakeLists.txt  qjpeghandler.cpp  qjpeghandler_p.h
ext/qtcolorpicker-2.6_1-opensource/: CMakeLists.txt  common.pri  qtcolorpicker.pro
src/: CMakeLists.txt  SettingsNetwork.h  SettingsStyle.h  SettingsVisual.h  main.cpp  mainWindow.cpp  mainWindow.h  stVi.cpp  stVi.h
src/QtUnitTest/: CMakeLists.txt
src/STCore/: CMakeLists.cmake
src/STCoreWidgets/: CMakeLists.txt  ColorListEditor.h  ExtendedTabWidget.cpp  MainMenuBar.cpp  MainMenuBar.h
src/STOpenGL/: CMakeLists.txt  GLCommon.cpp  GLHeatMap.h
src/analysis/: AnalysisClustering.cpp  AnalysisClustering.h  AnalysisCorrelation.cpp  AnalysisCorrelation.h  AnalysisDEA.cpp  AnalysisDEA.h  AnalysisFRD.cpp  AnalysisFRD.h  AnalysisHistogram.cpp  AnalysisHistogram.h  AnalysisPCA.cpp  AnalysisPCA.h  AnalysisPCA.ui  AnalysisQC.cpp  AnalysisQC.h  AnalysisScatter.cpp  AnalysisScatter.h  CMakeLists.txt  ChartView.cpp  ChartView.h  ScatterPlot.cpp  ScatterPlot.h  analysisClustering.ui  analysisCorrelation.ui  analysisDEA.ui  analysisQC.ui  analysisScatter.ui
src/async/: CMakeLists.txt  ImageProcessing.cpp  ImageProcessing.h
src/auth/: AuthorizationManager.cpp  AuthorizationManager.h  CMakeLists.txt  OAuth2.cpp  OAuth2.h  TokenStorage.cpp  TokenStorage.h
src/color/: CMakeLists.txt  ColorListEditor.cpp  ColorListEditor.h  ColorPalette.cpp  ColorPalette.h  ColorScheme.cpp  ColorScheme.h  DynamicRangeColor.cpp  DynamicRangeColor.h  FeatureColor.cpp  FeatureColor.h  HeatMap.cpp  HeatMap.h  HeatMapColor.cpp  HeatMapColor.h
src/concurrent/: CMakeLists.txt  DataRenderer.cpp  DataRenderer.h
src/config/: CMakeLists.txt  Configuration.cpp  Configuration.h  SettingsFormatXML.cpp  SettingsFormatXML.h
src/controller/: stVi.cpp  stVi.h
src/customWidgets/: CMakeLists.txt  SpinBoxSlider.cpp  SpinBoxSlider.h
src/data/: CMakeLists.txt  Cluster.cpp  Cluster.h  DataProxy.cpp  DataProxy.h  DataStore.cpp  DataStore.h  Dataset.cpp  Dataset.h  DatasetImporter.cpp  DatasetImporter.h  Gene.cpp  Gene.h  ObjectParser.cpp  ObjectParser.h  ResourceStore.h  STData.cpp  STData.h  SimpleCrypt.cpp  SimpleCrypt.h  SimpleCryptDevice.cpp  SimpleCryptDevice.h  Spot.cpp  Spot.h  UserSelection.cpp  UserSelection.h  datasetImporter.ui
src/dataModel/: CMakeLists.txt  Chip.cpp  Chip.h  ChipDTO.h  Dataset.cpp  Dataset.h  DatasetDTO.h  DatasetStatistics.cpp  DatasetStatistics.h  ErrorDTO.h  Feature.cpp  Feature.h  FeatureDTO.h  FeatureExtended.cpp  FeatureExtended.h  Gene.cpp  Gene.h  GeneDTO.h  GeneSelection.cpp  GeneSelection.h  GeneSelectionDTO.h  HitCount.cpp  HitCount.h  ImageAlignment.cpp  ImageAlignment.h  ImageAlignmentDTO.h  LastModifiedDTO.h  MinVersionDTO.h  OAuth2TokenDTO.h  ObjectParser.cpp  ObjectParser.h  STData.cpp  STData.h  Spot.h  User.cpp  User.h  UserDTO.h  UserExperiment.h  UserSelection.cpp  UserSelection.h  (+2 more)
src/dataModelDTO/: CMakeLists.txt  ChipDTO.h  DatasetDTO.cpp  DatasetDTO.h  DatasetStatisticsDTO.cpp  DatasetStatisticsDTO.h  ErrorDTO.h  FeatureDTO.cpp  FeatureDTO.h  GeneDTO.h  GeneSelectionDTO.h  HitCountDTO.h  ImageAlignmentDTO.cpp  ImageAlignmentDTO.h  OAuth2TokenDTO.h  UserDTO.cpp  UserDTO.h  UserExperimentDTO.cpp  UserExperimentDTO.h
src/dialogs/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  CreateSelectionDialog.cpp  CreateSelectionDialog.h  EditDatasetDialog.cpp  EditDatasetDialog.h  EditSelectionDialog.cpp  EditSelectionDialog.h  LoginDialog.cpp  LoginDialog.h  SelectionDialog.cpp  SelectionDialog.h  aboutdialog.ui  editDatasetDialog.ui  editSelectionDialog.ui  selectionConsole.ui
src/error/: ApplicationError.cpp  ApplicationError.h  CMakeLists.txt  Error.cpp  Error.h  ErrorManager.h  JSONError.cpp  JSONError.h  NetworkError.cpp  NetworkError.h  OAuth2Error.cpp  OAuth2Error.h  SSLNetworkError.cpp  SSLNetworkError.h  ServerError.cpp  ServerError.h
src/io/: CMakeLists.txt  FeatureExporter.cpp  FeatureExporter.h  GeneExporter.cpp  GeneExporter.h  GeneTXTExporter.cpp  GeneTXTExporter.h  GeneXMLExporter.cpp  GeneXMLExporter.h
src/math/: CMakeLists.txt  Common.h  GLAABB.h  GLCommon.h  GLHeatMap.cpp  GLHeatMap.h  GLMath.h  GLQuadTree.h  QuadTree.h  QuadTreeAABB.cpp  QuadTreeAABB.h  RInterface.h  tsne.cpp  tsne.h  vptree.h
src/model/: CMakeLists.txt  Chip.cpp  Chip.h  ClusterItemModel.cpp  ClusterItemModel.h  CompareGeneNames.cpp  CompareGeneNames.h  Dataset.cpp  Dataset.h  DatasetItemModel.cpp  DatasetItemModel.h  ExperimentsItemModel.cpp  ExperimentsItemModel.h  Feature.cpp  Feature.h  FeatureExtended.cpp  FeatureExtended.h  Gene.cpp  Gene.h  GeneFeatureItemModel.cpp  GeneFeatureItemModel.h  GeneItemModel.cpp  GeneItemModel.h  GeneNamesModel.cpp  GeneNamesModel.h  GeneSelectionDEAItemModel.cpp  GeneSelectionDEAItemModel.h  GeneSelectionItemModel.cpp  GeneSelectionItemModel.h  HitCount.cpp  HitCount.h  ObjectParser.cpp  ObjectParser.h  SortFilterProxyModel.cpp  SortFilterProxyModel.h  SortGenesProxyModel.cpp  SortGenesProxyModel.h  SpotItemModel.cpp  SpotItemModel.h  User.cpp  (+5 more)
src/network/: CMakeLists.txt  DownloadManager.cpp  DownloadManager.h  NetworkCommand.cpp  NetworkCommand.h  NetworkDiskCache.cpp  NetworkDiskCache.h  NetworkManager.cpp  NetworkManager.h  NetworkReply.cpp  NetworkReply.h  RESTCommandFactory.cpp  RESTCommandFactory.h
src/simpleCrypt/: CMakeLists.txt  SimpleCrypt.cpp  SimpleCrypt.h  SimpleCryptDevice.cpp  (+1 more)
(+736 files in other folders)
